# simulacion-proyecto-final

./: README.md  pyproject.toml
1.Subestimation/: theory.md
ring/playground/: test_magnetic_field.py
